--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,34 @@
+@import url('../css/styles/leaflet-search.css');
+@import url('../css/styles/leaflet-sidebar.css');
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  html, body {
-    height: 100%;
-  }
-  
-  
-  #map {
-    height: 100%;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html, body {
+  height: 100%;
+}
+
+
+#map {
+  height: 100%;
+}
+
+.infoControl {
+  padding: 6px 8px;
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255,255,255,0.8);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+}
+.infoControl h4 {
+  margin: 0 0 5px;
+  color: #777;
+}
+
+.lorem {
+  font-style: italic;
+  color: #AAA;
+}
